# application/services/custom_services/students/src/dao/studentsentityDao.ts
@@ -7,7 +7,42 @@ export class studentsentityDao {
     private studentsentity = studentsentityModel;
     constructor() { }
     
-    public async GpGetAllValues(callback){
+    public async GpSearch(studentsentityData, callback){
+    
+    new CustomLogger().showLogger('info', 'Enter into studentsentityDao.ts: GpSearch');
+
+    let andkey ;let and_obj = {} ;let orkey ;let or_obj = {} ;;
+
+    
+    
+    Object.entries(studentsentityData).forEach(
+                            ([key,value]) => {
+                                if(value !== ''){
+                                    andkey = key;
+                                    and_obj[andkey] = value;
+                                }
+                                else{
+                                    orkey = key;
+                                    or_obj[orkey] = { $ne: '' }
+                                }
+                            }
+                        );;
+    this.studentsentity.find({$and: [
+                            {
+                                $or: [
+                                   or_obj
+                                ]
+                            },
+                            and_obj
+                        ]}).then((result)	=>	{
+
+        new CustomLogger().showLogger('info', 'Exit from studentsentityDao.ts: GpSearch');
+
+        callback(result);
+}).catch((error)=>{
+callback(error);
+});}
+public async GpGetAllValues(callback){
     
     new CustomLogger().showLogger('info', 'Enter into studentsentityDao.ts: GpGetAllValues');
 
